feat(css): Some styling

--- a/services/front-end/src/app/features/forex/components/subscription-list/subscription-list.component.html
+++ b/services/front-end/src/app/features/forex/components/subscription-list/subscription-list.component.html
@@ -6,46 +6,41 @@
         </button>
     </mat-card-header>
     <mat-card-content>
-        <div class="currency-list" *ngFor="let currency of currencies">
+        <div class="currency-list" *ngFor="let currency of currencies; let i = index;">
             <div class="currency-list-item">
-                <div class="currency-details">
-                    <h2>EUR/{{currency._code}}</h2>
+                <div class="info-block currency-info">
+                    <h3>EUR/{{currency._code}}</h3>
                     <p>Following</p>
                 </div>
-                <mat-card *ngIf="getTodayHistory(currency) as todayHistory" class="card-stock" >
-                    <mat-card-header>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <div class="value-container">
-                            <div class="value">{{todayHistory.low}}</div>
-                            <div class="label">Low</div>
+                <div class="stock">
+                    <div class="card-stock">
+                        <div class="info-block">
+                            <h3>{{getTodayHistory(currency)?.low ?? '-'}}</h3>
+                            <p>Low</p>
                         </div>
-                        <div class="value-container">
-                            <div class="value">{{todayHistory.high}}</div>
-                            <div class="label">High</div>
+                        <div class="info-block">
+                            <h3>{{getTodayHistory(currency)?.high ?? '-'}}</h3>
+                            <p>High</p>
                         </div>
-                    </mat-card-content>
-                </mat-card>
-                <mat-card *ngIf="getYesterdayHistory(currency) as yesterdayHistory" class="card-stock" >
-                    <mat-card-header>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <div class="value-container">
-                            <div class="value">{{yesterdayHistory.low}}</div>
-                            <div class="label">Low</div>
+                    </div>
+                    <div class="card-stock yesterday-block">
+                        <div class="info-block">
+                            <h3>{{getYesterdayHistory(currency)?.low ?? '-'}}</h3>
+                            <p>Low</p>
                         </div>
-                        <div class="value-container">
-                            <div class="value">{{yesterdayHistory.high}}</div>
-                            <div class="label">High</div>
+                        <div class="info-block">
+                            <h3>{{getYesterdayHistory(currency)?.high ?? '-'}}</h3>
+                            <p>High</p>
                         </div>
-                    </mat-card-content>
-                </mat-card>
+                    </div>
+                </div>
                 <div class="action-buttons">
                     <button mat-raised-button color="warn" (click)="unsubscribeTo(currency._code)">
                         Stop following
                     </button>
                 </div>
             </div>
+            <mat-divider *ngIf="i < currencies.length - 1"></mat-divider>
         </div>
     </mat-card-content>
 </mat-card>
