--- a/services/front-end/src/app/features/forex/components/currency-picker-modal/currency-picker-modal.component.html
+++ b/services/front-end/src/app/features/forex/components/currency-picker-modal/currency-picker-modal.component.html
@@ -1,13 +1,15 @@
-<h1 mat-dialog-title>Subscribe to new currencies</h1>
-<div mat-dialog-content>
-    <mat-form-field>
-        <mat-label>Currencies</mat-label>
-        <mat-select [formControl]="selectedCurrency">
-            <mat-option *ngFor="let currency of currenciesList" [value]="currency">{{currency}}</mat-option>
-        </mat-select>
-    </mat-form-field>
-</div>
-<div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button [disabled]="!selectedCurrency.value" (click)="onSubscribeCurrency()">Confirm</button>
+<div *transloco="let t; read: 'forex.landing-page.currency-picker-modal'">
+    <h1 mat-dialog-title>{{t('subscribe-new')}}</h1>
+    <div mat-dialog-content>
+        <mat-form-field>
+            <mat-label>{{ t('currencies')}}</mat-label>
+            <mat-select [formControl]="selectedCurrency">
+                <mat-option *ngFor="let currency of currenciesList" [value]="currency">{{currency}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div mat-dialog-actions>
+        <button mat-button (click)="onNoClick()">{{ t('cancel')}}</button>
+        <button mat-button [disabled]="!selectedCurrency.value" (click)="onSubscribeCurrency()">{{ t('confirm') }}</button>
+    </div>
 </div>
