--- a/services/front-end/src/app/features/forex/components/currency-picker-modal/currency-picker-modal.component.html
+++ b/services/front-end/src/app/features/forex/components/currency-picker-modal/currency-picker-modal.component.html
@@ -6,10 +6,14 @@
             <mat-select [formControl]="selectedCurrency">
                 <mat-option *ngFor="let currency of currenciesList" [value]="currency">{{currency}}</mat-option>
             </mat-select>
+            <mat-error>{{ t('required') }}</mat-error>
         </mat-form-field>
     </div>
     <div mat-dialog-actions>
         <button mat-button (click)="onNoClick()">{{ t('cancel')}}</button>
-        <button mat-button [disabled]="!selectedCurrency.value" (click)="onSubscribeCurrency()">{{ t('confirm') }}</button>
+        <button mat-button color="primary" [disabled]="!selectedCurrency.valid || loading" (click)="onSubscribeCurrency()">
+            <mat-spinner *ngIf="loading" mode="indeterminate"></mat-spinner>
+            <span *ngIf="!loading">{{ t('confirm') }}</span>
+        </button>
     </div>
 </div>
