--- a/services/front-end/src/app/features/forex/components/currency-picker-modal/currency-picker-modal.component.html
+++ b/services/front-end/src/app/features/forex/components/currency-picker-modal/currency-picker-modal.component.html
@@ -12,8 +12,7 @@
     <div mat-dialog-actions>
         <button mat-button (click)="onNoClick()">{{ t('cancel')}}</button>
         <button mat-button color="primary" [disabled]="!selectedCurrency.valid || loading" (click)="onSubscribeCurrency()">
-            <mat-spinner *ngIf="loading" mode="indeterminate"></mat-spinner>
-            <span *ngIf="!loading">{{ t('confirm') }}</span>
+            <span>{{ t('confirm') }}</span>
         </button>
     </div>
 </div>
